<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="habitCreationViewModel"
            type="com.example.mentalplanner.viewModels.HabitCreationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/habitIconImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/habitNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:hint="@string/habit_name"
            android:inputType="textNoSuggestions"
            android:maxLength="64"
            android:minHeight="48dp"
            android:text="@={habitCreationViewModel.newHabitName}"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/habitIconImageView" />

        <Spinner
            android:id="@+id/habitIconSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="64dp"
            android:minHeight="48dp"
            android:selectedItemPosition="@={habitCreationViewModel.selectedIcon}"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            app:layout_constraintStart_toStartOf="@+id/habitNameEditText"
            app:layout_constraintTop_toBottomOf="@+id/habitNameEditText"
            tools:ignore="SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/habitTimePeriodSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="64dp"
            android:minHeight="48dp"
            android:selectedItemPosition="@={habitCreationViewModel.selectedHabitTimePeriod}"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/habitNameEditText"
            app:layout_constraintTop_toBottomOf="@+id/habitIconSpinner"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <TextView
            android:id="@+id/repeatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/repeat"
            app:layout_constraintBottom_toTopOf="@+id/daysChipGroup"
            app:layout_constraintStart_toStartOf="@+id/daysChipGroup" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline" />

        <TextView
            android:id="@+id/iconTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/icon"
            app:layout_constraintBottom_toTopOf="@+id/habitIconSpinner"
            app:layout_constraintStart_toStartOf="@+id/habitIconSpinner" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/daysChipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:chipSpacingHorizontal="8dp"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/habitTimePeriodSpinner"
            app:selectionRequired="true"
            app:singleLine="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/mondayChip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/tuesdayChip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/wednesdayChip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/thursdayChip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/fridayChip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/saturdayChip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/sundayChip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/doItAtTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/do_it_at"
            app:layout_constraintBottom_toTopOf="@+id/habitTimePeriodSpinner"
            app:layout_constraintStart_toStartOf="@+id/habitTimePeriodSpinner" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>