<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="goalsViewModel"
            type="com.example.mentalplanner.viewModels.GoalsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/select_your_goals"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/essentialButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/essential"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <Button
            android:id="@+id/eatDrinkHealthilyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/eat_drink_healthily"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/essentialButton" />

        <Button
            android:id="@+id/keepActiveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keep_active"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/eatDrinkHealthilyButton" />

        <Button
            android:id="@+id/easeStressButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ease_stress"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/keepActiveButton" />

        <Button
            android:id="@+id/leisureMomentsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/leisure_moments"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/easeStressButton" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ScrollView
            android:id="@+id/habitsScrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/nextButton"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/leisureMomentsButton">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/habitsChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:chipSpacingHorizontal="8dp"
                app:singleLine="false"
                app:singleSelection="true">

            </com.google.android.material.chip.ChipGroup>
        </ScrollView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>